$Id: CHANGES,v 1.125 2001/07/19 09:03:44 stelian Exp $

Changes between versions 0.4b22 and 0.4b23 (released ????????????)
==================================================================

1.	Fixed a buffer overflow in restore/tape.c. Patch provided by
	Marcus Meissner (Caldera International Security Dept.).

2.	Implement the Sun rmt extended protocol. Patch submitted
	by Ian Gordon <iangordon@users.sourceforge.net>.

3.	Check for the e2fsprogs header <ext2fs/ext2_fs.h> instead of 
	the linux kernel header. This ensures that dump always has the
	latest version of this file. Patch submitted by
	Andreas Dilger <adilger@turbolinux.com>.

4.	Report any filesystem present in either /etc/fstab with a 
	positive passno or /etc/dumpdates in dump -w output.
	Patch submitted by Andreas Dilger <adilger@turbolinux.com>.

5.	Fixed the looping problem in dump introduced in the 
	previous version.

6.	Changed the -B option of dump to limit the size of 
	_compressed_ output per volume if compression is on.
	Patch contributed by Helmut Jarausch 
	<jarausch@igpm.rwth-aachen.de>.

7.	Fixed a bug in reading the operator typed file/tape path for
	the next volume in restore.

8.	Implemented a "-F script" option to restore which permits the
	user to specify a script which will be launched at the
	beginning of each tape, useful for automatic programming of
	tape changers for example. See the restore man page for the
	script parameters and return codes.

9.	Small fix for the QFA routines provided by Uwe Gohlke 
	<uwe@ugsoft.de>, and some recommendations for QFA uses in
	the man pages.

10.	Fixed the multivolume restoring where making a mistake
	to the 'Mount next tape' prompt caused several blocks to
	be lost.

11.	Enhanced the -e option of dump to take as a parameter a
	comma separated list of inode numbers.

12.	Added the -E option to dump which specify a file containing
	inode numbers to exclude from the dump.

Changes between versions 0.4b21 and 0.4b22 (released May 12, 2001)