@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.125 2001/07/19 09:03:44 stelian Exp $
+$Id: CHANGES,v 1.126 2001/07/20 09:01:44 stelian Exp $
 
 Changes between versions 0.4b22 and 0.4b23 (released ????????????)
 ==================================================================
@@ -48,6 +48,8 @@ Changes between versions 0.4b22 and 0.4b23 (released ????????????)
 
 12.	Added the -E option to dump which specify a file containing
 	inode numbers to exclude from the dump.
+
+13.	Fixed the compressed multi-volume dump + restore.
 
 Changes between versions 0.4b21 and 0.4b22 (released May 12, 2001)
 ==================================================================
